--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -1,5 +1,5 @@
 .tasks {
-  background-color: white;
+  background-color: var(--cyan-tint-lighter);
   border-radius: 1rem;
   padding: 1.2rem 2.4rem;
 }
