--- a/src/components/Tasks/TasksItem.module.css
+++ b/src/components/Tasks/TasksItem.module.css
@@ -10,7 +10,7 @@
 
 .tasks-item p {
   font-size: 1.8rem;
-  color: var(---grey-cyan);
+  color: var(--cyan-shade-darker);
   font-weight: 500;
   margin-bottom: 0.8rem;
   max-width: 32rem;
@@ -21,7 +21,7 @@
 .tasks-item p:nth-child(3) {
   font-size: 1.6rem;
   margin-bottom: 1rem;
-  color: var(--grey-cyan-shade);
+  color: var(--grey-cyan);
 }
 
 .tasks-item div {
@@ -31,6 +31,7 @@
 
 .tasks-item button {
   background-color: var(--cyan-primary);
+  color: var(--black);
   font-weight: 600;
   font-size: 1.6rem;
   border-radius: 4px;
