--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,10 @@
 :root {
   --cyan-primary: #26c0ab;
   --cyan-tint: #c5e4e7;
-  --cyan-shade: #00494d;
   --cyan-tint-lighter: #f4fafa;
-  --grey-cyan: #5e7a7d;
-  --grey-cyan-shade: #7f9c9f;
-  --white: #fff;
+  --cyan-shade: #00494d;
+  --cyan-shade-darker: #001617;
+  --grey-cyan: #3d5151;
 }
 
 html {
